<resources>
    <string name="app_name">Paper</string>
    <string name="main_action_button">Main action button.</string>
    <string name="undo">Undo</string>

    <!-- Exception messages -->
    <string name="default_exception_message">Something went wrong!</string>
    <string name="user_already_exists_message">User already exists!</string>
    <string name="invalid_email_message">Invalid email address!</string>
    <string name="incorrect_information_message">The password or email address you entered is incorrect!</string>
    <string name="user_not_found_message">User not found!</string>
    <string name="data_not_found_message">Data not found!</string>

    <!-- Splash Fragment -->
    <string name="location_splash_animation">lottie/splash.json</string>

    <!-- Login Fragment -->
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send_password_recovery_email">Password recovery email has been sent.</string>

    <!-- Register Fragment -->
    <string name="registration_successful">Registration successful!</string>
    <string name="re_enter_password">Re-enter your password.</string>

    <!-- Home Fragment -->
    <string name="you_did_not_take_any_notes">You did not take any notes.</string>

    <!-- Note -->
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="create_date">Create\n%1$s</string>
    <string name="last_update_date">Last update\n%1$s</string>
    <string name="note_deleted">Note deleted.</string>

</resources>
